--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.react-clock__face {
+  border: 2px solid #ccc !important;
+}
+
+.react-clock__hand__body {
+  border-radius: 20%;
+  background-color: #ccc !important;
+}
