Added contact form and deleted boilerplate code

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,10 +3,18 @@
 @tailwind utilities;
 
 .react-clock__face {
-  border: 2px solid #ccc !important;
+  /* border: 2px solid #ccc !important; */
+  border: none !important;
+  background-color: #1f1f1f !important;
 }
 
 .react-clock__hand__body {
   border-radius: 20%;
   background-color: #ccc !important;
+}
+
+@media (prefers-color-scheme: dark) {
+  .react-clock__face {
+    background: #111;
+  }
 }
